2005-07-28  Inge Wallin  <ingwa@dhcp-254-153.lkpg.cendio.se>

	Fix error in creating HiLo charts
	(Bug number will be created)
	* kchart_part.cc (paintContent): Add code to handle HiLo chart
	separately.

	General code cleaning.
	
2005-07-23  Inge Wallin  <inge@lysator.liu.se>

	Fix an old FIXME: Get rid of KChartPart::m_bLoading;
	* kchart_part.{h,cc} (m_bLoading): removed
	(isLoading): removed

	Some code cleaning (improved comments).

2005-07-??  David Faure

	Fix bug 10xxxx: 
	* ??
	
2005-07-03  David Faure

	First steps for OASIS loading of charts.
	Loads chart type, row and columns labels, and the data.
	* kchart_part.{h,cc} (loadOasisData): New method
	(loadOasis): New method
	* kchart_params.{h,cc} (loadOasis): New method

	Code cleaning.
	* kchartWizardSelectChartTypePage.{h,cc} (KChartButton): take
	const QPixmap& instead of QPixmap*.
	
	
	================================================================
	KChart 1.4 released

	<There are some missed entries here.  I will try to find out what
	they were. /ingwa>

2005-05-10  Inge Wallin  <inge@lysator.liu.se>
	
	More work on bug 105356:
	* kdchart/KDChartParams.h (lineColor): return _lineColor again.
	* kdchart/KDChartParams_io.h (saveXML): Only save the line color
	if it is non-null.
	* kchart_part.cc (setAxisDefaults): Always set lineColor to
	null. This compensates for the (now fixed) bug in saving when
	reading back old charts.
	
2005-05-09  Fredrik Edemar  <f_edemar@linux.se>

        Fix bug 105356: Lines in a line chart are all black
        * kdchart/KDChartParams.h (lineColor()): always return an invalid
	QColor object in order for KDChartLinesPainter to use the current
	dataset color instead.

2005-05-06  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99995: KChart should be able to import CSV data
	* kchart_part.{h,cc} (doSetData): new method broken out of setData()
	(setData): Call doSetData
	kchart_view.cc (importData): Get data from the dialog and call
	KChartPart::doSetData()

	Code cleaning